    + debian/ changes for git-merge-changelog.
    + Don't hardcode gnulib directory in 01-gnulib-directory.patch.
      Instead, install gnulib-tool into the gnulib directory and symlink to
      it from /usr/bin, like the docs say to do.
    + Bump debhelper compat level to 9 for hardening flags.
  * Man page for git-merge-changelog adapted
    from comments at the top of git-merge-changelog.c

 -- Ian Beckwith <ianb@debian.org>  Sun, 02 Mar 2014 19:39:23 +0000

gnulib (20140202+stable-1) unstable; urgency=low

  * New upstream stable snapshot.
  * Refresh patches.
  * Standards-Version: 3.9.5 (no changes).
  * Tweak lintian overrides.

 -- Ian Beckwith <ianb@debian.org>  Sun, 16 Feb 2014 12:45:44 +0000

gnulib (20130805+stable-1) unstable; urgency=low

  * Resumed making upstream snapshots - sorry about the gap.
  * Packaged upstream stable snapshot (Closes: #687986, #710325).
  * Fix gnulib-tool --version, also show snapshot and debian
    package version (Closes: #710330).
  * Refresh 01-gnulib-directory.patch.
  * Update lintian overrides for magical shebangs.
  * Standards-Version: 3.9.4 (no changes).
  * debian/copyright: refresh, switch to machine-interpretable format.

 -- Ian Beckwith <ianb@debian.org>  Sun, 11 Aug 2013 21:16:48 +0100

gnulib (20120404+stable-1) unstable; urgency=low

  * New upstream stable snapshot.
  * Refresh 01-gnulib-directory.patch.
  * Standards-Version: 3.9.3 (no changes).

 -- Ian Beckwith <ianb@debian.org>  Fri, 06 Apr 2012 02:20:27 +0100

gnulib (20111211+stable-1) unstable; urgency=low

  * New upstream stable snapshot.
  * Refresh 01-gnulib-directory.patch.

 -- Ian Beckwith <ianb@debian.org>  Sun, 11 Dec 2011 06:56:11 +0000

gnulib (20110908+stable-1) unstable; urgency=low

  * New upstream stable snapshot.
  * Refresh 01-gnulib-directory.patch.

 -- Ian Beckwith <ianb@debian.org>  Thu, 08 Sep 2011 20:38:18 +0100

gnulib (20110609+stable-1) unstable; urgency=low

  * New upstream stable snapshot.
  * Refresh patches.