@@ -6,3 +6,6 @@ Format: HTML
 Index: /usr/share/doc/gnulib/gnulib.html
 Files: /usr/share/doc/gnulib/gnulib.html
 
+Format: Info
+Index: /usr/share/info/gnulib.info
+Files: /usr/share/info/gnulib.info
