@@ -3,3 +3,4 @@ NEWS
 NEWS.stable
 README
 users.txt
+STATUS-libposix
