@@ -32,7 +32,7 @@ override_dh_auto_install-indep:
 	cp -a check-module debian/gnulib/usr/bin
 	mkdir -p debian/gnulib/usr/share/gnulib
 	cp -a build-aux posix-modules config doc lib m4 modules top tests \
-	      MODULES.html.sh Makefile gnulib-tool \
+	      MODULES.html.sh Makefile gnulib-tool cfg.mk check-copyright \
 	      debian/gnulib/usr/share/gnulib
 	ln -s ../share/gnulib/gnulib-tool debian/gnulib/usr/bin
 	# Fix permissions
@@ -51,8 +51,12 @@ override_dh_auto_install-indep:
 	chmod 0755 debian/gnulib/usr/share/gnulib/tests/test-posix_spawn1.in.sh
 	chmod 0755 debian/gnulib/usr/share/gnulib/tests/test-posix_spawn2.in.sh
 	# Remove unused files
+	rm -f debian/gnulib/usr/share/gnulib/doc/gnulib.info
+	rm -f debian/gnulib/usr/share/gnulib/doc/gnulib.html
+	rm -f debian/gnulib/usr/share/gnulib/doc/updated-stamp
 	rm -f debian/gnulib/usr/share/gnulib/modules/COPYING
-	rm -f debian/gnulib/usr/share/gnulib/*/.cvsignore
-	rm -f debian/gnulib/usr/share/gnulib/*/.gitignore
+	rm -f debian/gnulib/usr/share/gnulib/*/.cvsignore debian/gnulib/usr/share/gnulib/.cvsignore
+	rm -f debian/gnulib/usr/share/gnulib/*/.gitignore debian/gnulib/usr/share/gnulib/.gitignore
+	rm -f debian/gnulib/usr/share/gnulib/*/.gitattributes debian/gnulib/usr/share/gnulib/.gitattributes
 
 override_dh_auto_test:
